// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchFilterRow renders correctly with a query 1`] = `
<DocumentFragment>
  <section
    class="section"
  >
    <div
      class="search-filter-wrapper"
    >
      <div
        class="columns"
      >
        <div
          class="column"
        >
          <form
            class="search-form"
          >
            <p
              class="search-form-input-wrapper"
            >
              <input
                class="input"
                data-testid="searchPost"
                name="searchPost"
                placeholder="Find a post"
                type="search"
                value="hello"
              />
            </p>
            <p
              class="control"
            >
              <button
                class="primary-button"
                data-testid="searchPostSubmit"
              >
                Search
              </button>
            </p>
          </form>
        </div>
        <div
          class="search-row-tags-wrapper"
        >
          <div
            class="tag-list-wrapper"
          >
            <a
              class="tag-wrapper"
              href="?tag=all"
              id="all"
            >
              <div
                class="tag-inactive"
                data-testid="all"
              >
                All
              </div>
              <span
                class="tag is-dark"
              >
                3
              </span>
            </a>
            <a
              class="tag-wrapper"
              href="?tag=three"
              id="three"
            >
              <div
                class="tag-inactive"
                data-testid="three"
              >
                three
              </div>
              <span
                class="tag-count-enabled"
              >
                3
              </span>
            </a>
            <a
              class="tag-wrapper"
              href="?tag=two"
              id="two"
            >
              <div
                class="tag-inactive"
                data-testid="two"
              >
                two
              </div>
              <span
                class="tag-count-enabled"
              >
                2
              </span>
            </a>
            <a
              class="tag-wrapper"
              href="?tag=one"
              id="one"
            >
              <div
                class="tag-inactive"
                data-testid="one"
              >
                one
              </div>
              <span
                class="tag-count-enabled"
              >
                1
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SearchFilterRow renders correctly with an active tag 1`] = `
<DocumentFragment>
  <section
    class="section"
  >
    <div
      class="search-filter-wrapper"
    >
      <div
        class="columns"
      >
        <div
          class="column"
        >
          <form
            class="search-form"
          >
            <p
              class="search-form-input-wrapper"
            >
              <input
                class="input"
                data-testid="searchPost"
                name="searchPost"
                placeholder="Find a post"
                type="search"
                value=""
              />
            </p>
            <p
              class="control"
            >
              <button
                class="primary-button"
                data-testid="searchPostSubmit"
              >
                Search
              </button>
            </p>
          </form>
        </div>
        <div
          class="search-row-tags-wrapper"
        >
          <div
            class="tag-list-wrapper"
          >
            <a
              class="tag-wrapper"
              href="?tag=all"
              id="all"
            >
              <div
                class="tag-inactive"
                data-testid="all"
              >
                All
              </div>
              <span
                class="tag is-dark"
              >
                3
              </span>
            </a>
            <a
              class="tag-wrapper"
              href="?tag=three"
              id="three"
            >
              <div
                class="tag-inactive"
                data-testid="three"
              >
                three
              </div>
              <span
                class="tag-count-enabled"
              >
                3
              </span>
            </a>
            <a
              class="tag-wrapper"
              href="?tag=two"
              id="two"
            >
              <div
                class="tag-inactive"
                data-testid="two"
              >
                two
              </div>
              <span
                class="tag-count-enabled"
              >
                2
              </span>
            </a>
            <a
              class="tag-wrapper"
              href="?tag=one"
              id="one"
            >
              <div
                class="tag-active"
                data-testid="one"
              >
                one
              </div>
              <span
                class="tag-count-enabled"
              >
                1
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SearchFilterRow renders correctly without a query 1`] = `
<DocumentFragment>
  <section
    class="section"
  >
    <div
      class="search-filter-wrapper"
    >
      <div
        class="columns"
      >
        <div
          class="column"
        >
          <form
            class="search-form"
          >
            <p
              class="search-form-input-wrapper"
            >
              <input
                class="input"
                data-testid="searchPost"
                name="searchPost"
                placeholder="Find a post"
                type="search"
                value=""
              />
            </p>
            <p
              class="control"
            >
              <button
                class="primary-button"
                data-testid="searchPostSubmit"
              >
                Search
              </button>
            </p>
          </form>
        </div>
        <div
          class="search-row-tags-wrapper"
        >
          <div
            class="tag-list-wrapper"
          >
            <a
              class="tag-wrapper"
              href="?tag=all"
              id="all"
            >
              <div
                class="tag-inactive"
                data-testid="all"
              >
                All
              </div>
              <span
                class="tag is-dark"
              >
                3
              </span>
            </a>
            <a
              class="tag-wrapper"
              href="?tag=three"
              id="three"
            >
              <div
                class="tag-inactive"
                data-testid="three"
              >
                three
              </div>
              <span
                class="tag-count-enabled"
              >
                3
              </span>
            </a>
            <a
              class="tag-wrapper"
              href="?tag=two"
              id="two"
            >
              <div
                class="tag-inactive"
                data-testid="two"
              >
                two
              </div>
              <span
                class="tag-count-enabled"
              >
                2
              </span>
            </a>
            <a
              class="tag-wrapper"
              href="?tag=one"
              id="one"
            >
              <div
                class="tag-inactive"
                data-testid="one"
              >
                one
              </div>
              <span
                class="tag-count-enabled"
              >
                1
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
